syntax = "proto3";

package api;

option go_package = "product/";

service ProductService {
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message CheckStockRequest {
  repeated int64 product_ids = 1;
}


message CheckStockResponse {
  repeated ProductState items_state = 1;
}

message ProductState {
  int64 product_id = 1;
  int64 count = 2;
}